feat(chore): add support for optional auth and apis for delete and put
